vbnc/vbnc/tests/Errors/30737-1.vb
Class A
    Sub Main()
    End Sub
End Class